gcc-14.2.0/gcc/testsuite/gdc.test/compilable/minimal2.d
version https://git-lfs.github.com/spec/v1
oid sha256:e7af75f8a586e4d94aef5781971d71435dc85c2edfd5daf035a9e38e32a774fa
size 500
